# sdk

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README  README.md
crates/core_bindings/: Cargo.toml
crates/events_bindings/: Cargo.toml
crates/events_codec_wasm/: Cargo.toml  README
crates/events_indexed_bindings/: Cargo.toml
crates/identity_bindings/: Cargo.toml
crates/replica_db_schema_bindings/: Cargo.toml
crates/replica_db_wasm/: Cargo.toml  README
crates/replica_sync_wasm/: Cargo.toml  README
crates/sdk/: Cargo.toml  README
crates/sdk/src/: config.rs
crates/sdk/tests/: client.rs  radrootsd.rs
crates/trade_bindings/: Cargo.toml
crates/types_bindings/: Cargo.toml
crates/xtask/: Cargo.toml
docs/: consumer-migration.md  generated-diffs.md  radroots-cleanup-inventory.md
