[package]
name = "radroots_types_bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
radroots_sdk_binding_model = { path = "../binding_model" }
radroots_types = { workspace = true }
